[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["SHArtyom <sartiom1@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
